# kedro-tutorial

./: .gitignore  README.md
movie-review-classifier/: README.md  pyproject.toml  requirements.txt
movie-review-classifier/conf/base/: parameters.yml
movie-review-classifier/data/01_raw/: movie_reviews.csv
movie-review-classifier/src/: run.py
movie-review-classifier/src/movie_review_classifier/: __init__.py  review_classifier.py  settings.py
review-classifier/: .gitignore  README.md  pyproject.toml
review-classifier/conf/base/: catalog.yml  logging.yml
review-classifier/src/: __init__.py  main.py  pyproject.toml
review-classifier/src/review_classifier/: __init__.py  review_classfier.py  settings.py  utils.py
review-classifier/src/tests/: test_run.py
