[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "movie_review_classifier"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
movie-review-classifier = "movie_review_classifier.__main__:main"

[tool.kedro]
package_name = "movie_review_classifier"
project_name = "movie-review-classifier"
kedro_init_version = "0.19.3"
tools = [ "Data Structure",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "movie_review_classifier.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
